--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ php:
 before_script:
   - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
+  - php -l class.simple_mail.php
 
 script:
   - phpunit --configuration ./tests/stub.xml
-  - phpcs --standard=PSR1
+  - phpcs --standard=PSR1 class.simple_mail.php
