--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,12 @@ before_script:
   - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
   - php -l class.simple_mail.php
+  
+tools:
+    external_code_coverage: true
 
 script:
-  - phpunit --configuration phpunit.xml
+  - phpunit --configuration phpunit.xml --coverage-clover=coverage.clover
   - phpcs --standard=Zend class.simple_mail.php
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
