--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,14 @@
 tools:
   # Runs PHP Code Sniffer
-  php_code_sniffer: true
+  php_code_sniffer:
+    filter:
+      extensions:
+        - php
+      excluded_paths:
+        - example
+        - tests
+      standard:
+        - Zend
 
   # Runs PHP Copy/Paste Detector
   php_cpd:
