--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     },
     "autoload": {
         "classmap": ["class.simple_mail.php"]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "master"
+        }
     }
 }
