--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1.0-dev"
+            "dev-master": "master-dev"
         }
     },
     "minimum-stability": "dev"
