--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "require": {
         "php": ">=5.2.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.7"
+    },
     "autoload": {
         "classmap": ["class.simple_mail.php"]
     }
