--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: php
 
 php:
+  - 5.2
   - 5.3
   - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
 
-before_script:
-  - pyrus install pear/PHP_CodeSniffer
-  - phpenv rehash
-  - php -l class.simple_mail.php
+cache:
+  directories:
+    - $HOME/.composer/cache
+    - vendor
 
 script:
-  - phpunit --configuration phpunit.xml --coverage-clover=coverage.clover
-  - phpcs --standard=Zend class.simple_mail.php
+  - composer run-script test-build
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
