--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,17 @@
         "php": ">=5.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "squizlabs/php_codesniffer": "~2.8"
     },
     "autoload": {
         "classmap": ["class.simple_mail.php"]
+    },
+    "scripts": {
+        "test-build": [
+            "vendor/bin/phpunit --colors=always",
+            "vendor/bin/phpcs --standard=Zend class.simple_mail.php",
+            "php -l class.simple_mail.php"
+        ]
     }
 }
